# speak

./: .gitignore  Makefile  Package.swift  README.md
Resources/: AppIcon.icns  Info.plist
Sources/CWhisper/include/: module.modulemap
Sources/Speak/App/: HotkeyManager.swift  SpeakApp.swift  StatusBarController.swift
Sources/Speak/Audio/: AudioEngine.swift  RingBuffer.swift  VoiceActivityDetector.swift
Sources/Speak/Benchmark/: BenchmarkRunner.swift  BenchmarkView.swift
Sources/Speak/Pipeline/: TranscriptionPipeline.swift
Sources/Speak/UI/: OnboardingView.swift  RecordingOverlay.swift  SettingsView.swift
Sources/Speak/Utils/: LoginItemManager.swift  PerformanceMonitor.swift  TextOutput.swift
Sources/Speak/Whisper/: ModelDownloader.swift  ModelManager.swift  ModelNameFormatter.swift  TranscriptionResult.swift  WhisperContext.swift  WhisperSettings.swift
Sources/SpeakBenchmark/: main.swift
Tests/SpeakTests/: SpeakTests.swift
linux/: CMakeLists.txt
linux/src/: audio_engine.cpp  audio_engine.h  benchmark.cpp  benchmark.h  control.cpp  control.h  hotkey_manager.cpp  hotkey_manager.h  main.cpp  model_downloader.cpp  model_downloader.h  model_manager.cpp  model_manager.h  overlay.cpp  overlay.h  performance_monitor.h  ring_buffer.h  settings.cpp  settings.h  text_output.cpp  text_output.h  transcription_pipeline.cpp  transcription_pipeline.h  transcription_result.h  vad.cpp  vad.h  whisper_context.cpp  whisper_context.h
